# python-intermediate-rivercatchment

./: .gitignore  LICENSE  README.md  catchment-analysis.py  examples.ipynb  mypy_tutorial.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
catchment/: models.py
tests/: test_models.py
